# crew

./: .gitignore  CONTRIBUTING.md  DESIGN.md  README.md  SCHEMA.md  TEMPLATE.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude-plugin/: plugin.json
concept/: BUILD-PLAN.md  CONVERSATION-CONTEXT.md  DECISIONS.md  NAMES.md  OVERLAP.md  README.md  SPEC.md
crew/: __init__.py  build_embeddings.py  build_graph.py  build_index.py  cli.py  deadwood_report.py  embed_query.py  install.py  mcp_server.py  paths.py  post_write_hook.py  semantic_duplicate_check.py  usage_log.py  validate.py
design/: housekeeping-plan.md  journey-seeker.md  round1-journey-critiques.md  round2-journey-synthesis.md
examples/: stock-ml-use-case.md
personas/: alan-cooper.md  classical-chartist.md  continuous-discovery-pm.md  contrarian-simplicity-skeptic.md  data-honesty-skeptic.md  dieter-rams.md  don-norman.md  elon-musk.md  gibson-biddle.md  information-architect.md  jeff-bezos.md  jeff-lawson.md  jennifer-pahlka.md  jobs-to-be-done-theorist.md  jony-ive.md  lenny-rachitsky.md  lynn-good.md  marty-cagan.md  nick-huber.md  reed-hastings.md  regime-aware-macro-thinker.md  rigorous-quant-ml-researcher.md  steve-jobs.md  stewart-butterfield.md  teresa-torres.md  the-librarian.md  walker-deibel.md
scripts/: build-embeddings.py  build-graph.py  build-index.py  deadwood-report.py  embed-query.py  post-write-hook.py  semantic-duplicate-check.py  usage-log.py  validate.py
vocab/: approach.yml  expertise.yml  function.yml
wrecking_crew/: __init__.py  build_embeddings.py  cli.py  (+11 more)
(+45 files in other folders)
